tests/errors/oob_index.solar
fn main() {
  let a: [Int] = [10, 20, 30];
  print_int(a[5u]);
}
